# batonel

./: ARCHITECTURE_RULES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/: labels.csv  labels.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  partner_preset_submission.yml
.github/trust/: allowed_signers
.github/workflows/: archflow-audit-pr-gate.yml  archflow-guard-sidecar.yml  archflow-release-cli.yml  archflow-verify-example.yml  architecture-pr-checklist.yml  auto-publish-release.yml  (+12 more)
docs/: ARCHITECTURE_RULES.ja.md  LICENSE.ja.md  acceptance-criteria.md  architecture-flow.md  audit-evidence-retention.md  contributing-areas.md  ecosystem-compliance-maturity.md  glossary.md  governance-exceptions.md  governance-rbac.md  partner-preset-review.md  preset-onboarding.md  presets.md  quality-model.md  release-operations.md  roadmap-detail.md  schema-guide.md  usage.md  usage_examples.md
examples/: README.md
schemas/: artifacts-plan.schema.yaml  contract.schema.yaml  contracts-template.schema.yaml  org-team-policy-layer.schema.yaml  placement-rules.schema.yaml  policy-profile.schema.yaml  preset-package.schema.yaml  preset-registry-index.schema.yaml  project.schema.yaml  prompt.schema.yaml
scripts/: check_compliance_level.sh  install-archflow.sh  install-batonel.sh  onboarding_e2e_init_plan.sh  sync_example_prompts.py  test_check_compliance_level.sh  test_verify_trust.sh  verify_parity.sh  verify_trust.sh
src/: cli.rs  main.rs
tests/: cli.rs
(+235 files in other folders)
