[package]
name = "archflow"
version = "0.1.0"
edition = "2021"
description = "Architecture-to-Execution Bridge"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.27.0"
