[package]
name = "batonel"
version = "1.8.0"
edition = "2021"
description = "Architecture-to-Execution Bridge"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.27.0"
